crates/polaris_system/tests/compile_fail/destructured_param.rs
use polaris_system::system;

#[system]
async fn destructured_system((a, b): (i32, i32)) -> i32 {
    a + b
}

fn main() {}
